# anchor

./: Dockerfile.orchestrator  README.md  anchor.py  deploy.py  docker-compose.yml  pyproject.toml  requirements.txt  workflow.md
.anchor/: .gitignore  HEAD  config.yml
anchor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
anchorctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/blue/: Dockerfile  app.py
apps/blue/templates/: index.html
apps/green/: app.py  requirements-app.txt
apps/green/templates/: index.html
nginx/: nginx.conf  nginx.template.conf
orchestrator/: config_parser.py  db.py  docker_manager.py  fsm.py  health_prober.py  main.py  metrics_gate.py  nginx_controller.py
prometheus/: prometheus.yml
