[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorctl"
version = "0.1.0"
description = "Zero-downtime deployment orchestrator — Terraform-style Blue/Green deploys with automated rollback."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
    "pyyaml>=6.0",
]

[project.scripts]
anchorctl = "anchor:cli"

[project.optional-dependencies]
orchestrator = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-statemachine>=2.5",
    "jinja2>=3.1",
    "docker>=7.1",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
py-modules = ["anchor"]
packages = ["orchestrator"]
